test/valid/64854_add/add.agu
-- Author: 64854, Diogo Almeida

let add (a, b) : (Int, Int) -> Int = 
    let sum : Int = a + b ;
    sum

let main(_) : Unit -> Unit =
    print(add(1, 2))