test/invalid-syntax/58219_invalid_number_of_arguments/invalid_number_of_arguments.agu
-- Author: 58219, Mariana Costa
-- Semantic error: number of arguments should be 2

let add (a, b) : (Int, Int) -> Int =
    a + b

let main : Unit =
    print(add(5, 10 15))